[package]
name = "async-graphql-poem"
version = "0.1.0"
edition = "2018"

[dependencies]
async-graphql = { path = "../..", version = "2.9.11" }

poem = "0.3.6"
futures-util = { version = "0.3.13", default-features = false }
serde_json = "1.0.66"
tokio-util = { version = "0.6.7", features = ["compat"] }
